[package]
name = "rust-learning"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.4"
compression = "0.1.5"
cors = "0.1.0"
delegate = "0.13.4"
derive_more = { version = "2.0.1", features = ["full"] }
futures = "0.3.31"
httpmock = "0.7.0"
isahc = "1.7.2"
predicates = "3.1.3"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
tempfile = "3.22.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full", "test-util"] }
tokio-stream = "0.1.17"
tower = { version = "0.5.2", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.6.6", features = ["trace", "cors", "compression-gzip"] }
ux = { version = "0.1.6", features= ["std"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
criterion = { version = "0.5", features = ["async_tokio"] }
faux = "0.1.5"

[[bench]]
name = "sqlite_bench"
harness = false
